--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,8 +1,9 @@
-.list{
+.list {
   display: flex;
   width: 100%;
 
-  .listContainer{
+  .listContainer {
     flex: 6;
+    padding: 20px;
   }
 }
