--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,7 +1,7 @@
 .table {
 
   padding: 20px;
-  background: #f9fcf7;
+  background: #f9fcf7; /////// bg color
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(34, 139, 34, 0.15);
   font-family: 'Segoe UI', sans-serif;
