--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -1,7 +1,8 @@
 .featured{
-  flex: 2;
+  flex: 3;
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-  padding: 10px;
+  padding: 50px 10px;
+
 
   .top{
     display: flex;
