--- a/src/components/widget/widget.scss
+++ b/src/components/widget/widget.scss
@@ -2,11 +2,14 @@
   display: flex;
   justify-content: space-between;
   flex: 1;
-  padding: 10px;
+  padding: 15px 20px;
+  box-shadow: 0 4px 12px rgba(34, 139, 34, 0.15);
+  background: #ffffff;
   
-  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-  border-radius: 10px;
+  // box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  border-radius: 15px;
   height: 100px;
+  cursor: pointer;
 
   .left, .right{
     display: flex;
@@ -16,15 +19,18 @@
     .title{
       font-weight: bold;
       font-size: 14px;
-      color: rgb(160, 160, 160,);
+      // color: rgb(160, 160, 160,);
+      color: #33691e;
     }
     .counter{
         font-size: 28px;
         font-weight: 300;
+        color: #33691e;
     }
     .link{
           font-size: 12px;
           border-bottom: 1px solid gray;
+          color: #33691e;
     }
 
     .percentage{
