--- a/src/pages/Schedule/schedule.scss
+++ b/src/pages/Schedule/schedule.scss
@@ -4,13 +4,13 @@ display: flex;
   .scheduleContainer{
     flex: 6;
 
-    .schedulefilterContainer, .weeklySchedule{
-      box-shadow: 0 4px 12px rgba(34, 139, 34, 0.15);
-      border-radius: 10px;
-      padding: 20px;
-      margin: 20px;
+    .schedulefilterContainer{
+      padding: 50px 100px 30px 100px;
+    }
+
+    .weeklyScheduleContainer{
+      padding: 0px 100px 0px 100px;
+      
     }
   }
-
-
 }
