--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,9 +1,14 @@
-.list {
+.list{
   display: flex;
-  width: 100%;
 
-  .listContainer {
+
+  .listContainer{
     flex: 6;
-    padding: 20px;
+    max-width: 100vw;
+    overflow-x: auto;
+
+    .usersContent{
+      padding: 50px 100px;
+    }
   }
 }
