--- a/src/pages/view/view.scss
+++ b/src/pages/view/view.scss
@@ -7,13 +7,15 @@
     flex: 6;
 
     .transacContainer{
-      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      // box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      box-shadow: 0 4px 12px rgba(34, 139, 34, 0.15);
+      border-radius: 10px;
       padding: 20px;
       margin: 20px;
 
       .transacTitle{
         font-weight: 500;
-        color: gray;
+        color: #2e7d32;
         margin-bottom: 15px;
         
       }
